--- a/a_propos.html
+++ b/a_propos.html
@@ -17,7 +17,8 @@
         <div class="header_navbar_desktop">
 
             <nav class="desktop_nav">
-                <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
+                <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY"
+                        id="header_logo_desktop"></a>
                 <ul class="ul_desktop">
                     <li><a href="/index.html">Accueil</a></li>
                     <li><a href="/cartes.html">Carte</a></li>
@@ -25,8 +26,7 @@
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <a href="https://www.thefork.fr/restaurant/le-joy-r3214" target="_blank"><button
-                    id="cta_btn_desktop">Réserver</button></a>
+            <a href="https://www.thefork.fr/restaurant/le-joy-r3214" target="_blank" id="cta_btn_desktop">Réserver</a>
         </div>
 
         <!-- MOBILE NAV -->
@@ -65,7 +65,8 @@
                 </div>
                 <p class="paragraph_bgmenu">Joy, 2023 - Tous droits réservés</p>
             </nav>
-            <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
+            <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY"
+                    id="header_logo_mobile"></a>
         </div>
     </header>
     <div class="content">
@@ -98,7 +99,7 @@
                     alimentaire
                     en recyclant et en compostant les déchets alimentaires.</p>
             </div>
-            <div class="hr_container" id="last_spacer">
+            <div class="hr_container last_spacer">
                 <hr class="rounded">
             </div>
             <div class="info_eco_cult">
@@ -121,7 +122,7 @@
             <hr class="rounded">
         </div>
         <h1 class="title">Nos partenaires</h1>
-        <div id="card_partenaire">
+        <div class="card_partenaire">
             <img src="./Images/Lucie_DESCHAMPS.jpg" alt="photo Lucie DESCHAMPS" id="img_Lucie_D">
             <div class="partenaire_info">
                 <div>
@@ -142,7 +143,7 @@
         <div class="hr_container">
             <hr class="rounded">
         </div>
-        <div id="card_partenaire">
+        <div class="card_partenaire">
             <img src="./Images/Nicolas_ROUSSEAU.jpg" alt="photo Nicolas ROUSSEAU" id="img_Nicolas_R">
             <div class="partenaire_info">
                 <div>
@@ -165,7 +166,7 @@
         <div class="hr_container">
             <hr class="rounded">
         </div>
-        <div id="card_partenaire">
+        <div class="card_partenaire">
             <img src="./Images/Martin_DUPONT.jpg" alt="photo Martin DUPONT" id="img_Martin_D">
             <div class="partenaire_info">
                 <div>
@@ -187,8 +188,8 @@
         <div class="hr_container">
             <hr class="rounded">
         </div>
-        <div id="card_partenaire">
-            <img src="./Images/Caroline DUBOIS.jpg" alt="photo Caroline DUBOIS" id="img_Caroline_D">
+        <div class="card_partenaire">
+            <img src="./Images/Caroline_DUBOIS.jpg" alt="photo Caroline DUBOIS" id="img_Caroline_D">
             <div class="partenaire_info">
                 <div>
                     <h2 class="sub_title">Caroline DUBOIS</h2>
@@ -215,7 +216,7 @@
             <button onclick="window.location.href='https://www.thefork.fr/restaurant/le-joy-r3214';"
                 id="cta_btn">Réserver</button>
         </div>
-        <div class="hr_container" id="last_spacer">
+        <div class="hr_container last_spacer">
             <hr class="rounded">
         </div>
         <img src="./Images/img_bottom_a_propos.jpg" alt="Spacer_HQ" id="btm_img_a_propos">
@@ -223,7 +224,7 @@
 
     <footer>
 
-        <!-------------- MOBILE FOOTER -------------->
+        <!-- MOBILE FOOTER -->
 
         <div class="footer_container">
             <div class="footer_logo">
@@ -286,7 +287,7 @@
                 </div>
             </div>
 
-            <!-------------- DESKTOP FOOTER -------------->
+            <!-- DESKTOP FOOTER -->
 
             <div id="social_media_menu">
                 <div class="social_media_desktop">
