--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,8 @@
         <div class="header_navbar_desktop">
 
             <nav class="desktop_nav">
-                <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
+                <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY"
+                        id="header_logo_desktop"></a>
                 <ul class="ul_desktop">
                     <li><a href="/index.html">Accueil</a></li>
                     <li><a href="/cartes.html">Carte</a></li>
@@ -25,8 +26,7 @@
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <a href="https://www.thefork.fr/restaurant/le-joy-r3214" target="_blank"><button
-                    id="cta_btn_desktop">Réserver</button></a>
+            <a href="https://www.thefork.fr/restaurant/le-joy-r3214" target="_blank" id="cta_btn_desktop">Réserver</a>
         </div>
 
         <!-- MOBILE NAV -->
@@ -65,7 +65,8 @@
                 </div>
                 <p class="paragraph_bgmenu">Joy, 2023 - Tous droits réservés</p>
             </nav>
-            <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
+            <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY"
+                    id="header_logo_mobile"></a>
         </div>
     </header>
     <div class="content">
@@ -92,7 +93,7 @@
         </div>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10497.298101933107!2d2.3013355!3d48.8710897!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fc20c21e081%3A0xe363d1ed12762de1!2sLe%20Joy!5e0!3m2!1sfr!2sfr!4v1686240514171!5m2!1sfr!2sfr"
-            width=auto height="400" style="border:0;" allowfullscreen="" loading="lazy"
+            height="500" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="hr_container">
             <hr class="rounded">
@@ -109,7 +110,7 @@
 
     <footer>
 
-        <!-------------- MOBILE FOOTER -------------->
+        <!-- MOBILE FOOTER -->
 
         <div class="footer_container">
             <div class="footer_logo">
@@ -172,7 +173,7 @@
                 </div>
             </div>
 
-            <!-------------- DESKTOP FOOTER -------------->
+            <!-- DESKTOP FOOTER -->
 
             <div id="social_media_menu">
                 <div class="social_media_desktop">
