--- a/cartes.html
+++ b/cartes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Joy - Carte</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -17,7 +17,8 @@
         <div class="header_navbar_desktop">
 
             <nav class="desktop_nav">
-                <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
+                <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY"
+                        id="header_logo_desktop"></a>
                 <ul class="ul_desktop">
                     <li><a href="/index.html">Accueil</a></li>
                     <li><a href="/cartes.html">Carte</a></li>
@@ -25,8 +26,7 @@
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <a href="https://www.thefork.fr/restaurant/le-joy-r3214" target="_blank"><button
-                    id="cta_btn_desktop">Réserver</button></a>
+            <a href="https://www.thefork.fr/restaurant/le-joy-r3214" target="_blank" id="cta_btn_desktop">Réserver</a>
         </div>
 
         <!-- MOBILE NAV -->
@@ -65,7 +65,8 @@
                 </div>
                 <p class="paragraph_bgmenu">Joy, 2023 - Tous droits réservés</p>
             </nav>
-            <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY" id="header_logo"></a>
+            <a href="/index.html"><img src="/Images/Logo_NB_Avec_Baseline.png" alt="logo JOY"
+                    id="header_logo_mobile"></a>
         </div>
     </header>
     <div class="content">
@@ -225,7 +226,7 @@
 
     <footer>
 
-        <!-------------- MOBILE FOOTER -------------->
+        <!-- MOBILE FOOTER -->
 
         <div class="footer_container">
             <div class="footer_logo">
@@ -288,7 +289,7 @@
                 </div>
             </div>
 
-            <!-------------- DESKTOP FOOTER -------------->
+            <!-- DESKTOP FOOTER -->
 
             <div id="social_media_menu">
                 <div class="social_media_desktop">
