--- a/contact.html
+++ b/contact.html
@@ -70,31 +70,34 @@
         </div>
     </header>
     <div class="content">
+
         <h1 class="title">Contact</h1>
         <img src="./Images/img_top_contact.jpg" alt="intérieur du restaurant" id="img_top">
-        <div class="contact_informations">
-            <h2 class="sub_title">Restaurant JOY</h2>
-            <div>
-                <p class="paragraph">14 Rue de la Nature</p>
-                <p class="paragraph">75001 Paris</p>
+        <div class="contact_map">
+            <div class="contact_informations">
+                <h2 class="sub_title">Restaurant JOY</h2>
+                <div>
+                    <p class="paragraph">14 Rue de la Nature</p>
+                    <p class="paragraph">75001 Paris</p>
+                </div>
+                <div>
+                    <p class="paragraph">01 23 45 67 89</p>
+                    <p class="paragraph">contact@joy-restaurant.fr</p>
+                </div>
+                <h3 class="sub_sub_title">Horaires</h3>
+                <div>
+                    <p class="paragraph">Mardi - Samedi : 12h00 - 14h30 et 19h00 - 22h30</p>
+                    <p class="paragraph">Dimanche - Lundi : fermé</p>
+                </div>
             </div>
-            <div>
-                <p class="paragraph">01 23 45 67 89</p>
-                <p class="paragraph">contact@joy-restaurant.fr</p>
+            <div class="hr_container last_spacer">
+                <hr class="rounded">
             </div>
-            <h3 class="sub_sub_title">Horaires</h3>
-            <div>
-                <p class="paragraph">Mardi - Samedi : 12h00 - 14h30 et 19h00 - 22h30</p>
-                <p class="paragraph">Dimanche - Lundi : fermé</p>
-            </div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10497.298101933107!2d2.3013355!3d48.8710897!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fc20c21e081%3A0xe363d1ed12762de1!2sLe%20Joy!5e0!3m2!1sfr!2sfr!4v1686240514171!5m2!1sfr!2sfr"
+                height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="hr_container">
-            <hr class="rounded">
-        </div>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10497.298101933107!2d2.3013355!3d48.8710897!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fc20c21e081%3A0xe363d1ed12762de1!2sLe%20Joy!5e0!3m2!1sfr!2sfr!4v1686240514171!5m2!1sfr!2sfr"
-            height="500" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="hr_container">
             <hr class="rounded">
         </div>
@@ -102,7 +105,7 @@
             <button onclick="window.location.href='https://www.thefork.fr/restaurant/le-joy-r3214';"
                 id="cta_btn">Réserver</button>
         </div>
-        <div class="hr_container" id="last_spacer">
+        <div class="hr_container last_spacer">
             <hr class="rounded">
         </div>
         <img src="./Images/img_bottom_contact.jpg" alt="haricots verts, semoule et poisson" id="btm_img_contact">
