--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <button type="button" onclick="window.location.href='https://www.thefork.fr/restaurant/le-joy-r3214';"
                 id="cta_btn">Réserver</button>
         </div>
-        <div class="hr_container" id="last_spacer">
+        <div class="hr_container last_spacer">
             <hr class="rounded">
         </div>
         <img src="./Images/img_bottom_accueil.jpg" alt="Saumon et ses légumes" id="btm_img_accueil">
