--- a/cartes.html
+++ b/cartes.html
@@ -218,7 +218,7 @@
             <button onclick="window.location.href='https://www.thefork.fr/restaurant/le-joy-r3214';"
                 id="cta_btn">Réserver</button>
         </div>
-        <div class="hr_container" id="last_spacer">
+        <div class="hr_container last_spacer">
             <hr class="rounded">
         </div>
         <img src="./Images/img_bottom_carte.jpg" alt="Saumon à l'orange" id="btm_img_carte">
